# sample-package

./: .coverage  pyproject.toml
docs/: index.html  search.js  src.html  tests.html
docs/src/: bye_app.html  hello_app.html
docs/src/bye_app/: bye_main.html
docs/src/hello_app/: hello_main.html
docs/tests/: test_bye_app.html  test_hello_app.html
src/hello_app/: hello_main.py
tests/: test_hello_app.py
