[tool.poetry]
name = "sample-package"
version = "0.1.0"
description = ""
authors = ["Daniel"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
pytest = "^8.2.1"
pylint = "^3.2.2"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"
radon = "^6.0.1"
bandit = "^1.7.8"
pdoc = "^14.5.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
  testpaths = ["tests"]
  addopts = "--cov=src --cov-report=html --cov-fail-under=90"
